manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: aaa
  labels:
    app.kubernetes.io/name: aaa
    kubernetes.azure.com/generator: devhub
  namespace: namespace-workflow-1746228705521
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: aaa
  template:
    metadata:
      labels:
        app.kubernetes.io/name: aaa
    spec:
      containers:
        - name: aaa
          image: acrworkflow1746221066499.azurecr.io/image-workflow-1746228705521:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "0.5"
              memory: "0.5Gi"
            limits:
              cpu: "1"
              memory: "1Gi"
          livenessProbe:
            tcpSocket:
              port: 80
          readinessProbe:
            tcpSocket:
              port: 80
            periodSeconds: 5
            timeoutSeconds: 5
            failureThreshold: 1
            successThreshold: 1
            initialDelaySeconds: 3
          startupProbe:
            tcpSocket:
              port: 80
            periodSeconds: 10
            timeoutSeconds: 1
            failureThreshold: 3
            successThreshold: 1
            initialDelaySeconds: 0
          securityContext:
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
              add:
                - SETPCAP
                - MKNOD
                - AUDIT_WRITE
                - CHOWN
                - DAC_OVERRIDE
                - FOWNER
                - FSETID
                - KILL
                - SETGID
                - SETUID
                - NET_BIND_SERVICE
                - SYS_CHROOT
                - SETFCAP
                - SYS_PTRACE
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
          - weight: 100
            podAffinityTerm:
              topologyKey: kubernetes.io/hostname
              labelSelector:
                matchLabels:
                  app.kubernetes.io/name: aaa
      topologySpreadConstraints:
        - maxSkew: 1
          topologyKey: kubernetes.io/hostname
          whenUnsatisfiable: ScheduleAnyway
          labelSelector:
            matchLabels:
              app.kubernetes.io/name: aaa
