manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: go-echo
  namespace: default
  labels:
    kubernetes.azure.com/generator: ca
spec:
  type: LoadBalancer
  selector:
    app: go-echo
  ports:
    - protocol: TCP
      port: 1323
      targetPort: 1323
